Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63440

Cannot build Qt 5.6.3 from source on Mac

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.9.3, 5.10.0
    • 5.6.3
    • WebView
    • None
    • macOS
    • 3bcd4c3506c9352874f1403aba22e36108a867a2

    Description

      I tried to build Q 5.6.3 from source on OSX 10.12 with XCode 8 using this configure:

      ../qt-everywhere-opensource-src-5.6.3/configure -prefix "/Developer/Qt5.6.3-clang" -debug-and-release -release -force-debug-info -separate-debug-info -nomake tests -nomake examples -opensource -c++11 -shared -platform macx-clang -sysconfdir /Library/Preferences/Qt -qt-zlib -qt-libjpeg -qt-libpng -framework -securetransport -no-feature-gestures -no-accessibility -skip qt3d

      Compilation failed in

      /qt-everywhere-opensource-src-5.6.3/qtwebview/src/webview/qquickwebview.cpp:305:9: error: calling 'warning' with incomplete return type 'QDebug'
              qWarning() << "No JavaScript engine, unable to handle JavaScript callback!";
              ^~~~~~~~~~
      I had to comment this line out.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            danny77uk Daniel
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes