Use printf style qDebug

This generates more compact code. It also fixes a build issue with
some disabled features on macOS.

Task-number: QTBUG-63440
Change-Id: Ice800bdfef09dd83310d40cadd37c15c846ca3e1
Reviewed-by: Viktor Engelmann <viktor.engelmann@qt.io>
Reviewed-by: Christian Stromme <christian.stromme@qt.io>
(cherry picked from commit 3bcd4c3506c9352874f1403aba22e36108a867a2)